# lambda-appsync

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  schema.graphql
.github/workflows/: ci.yml  release.yml
.hooks/: pre-commit
lambda-appsync/: Cargo.toml
lambda-appsync-proc/: Cargo.toml
lambda-appsync-proc/src/: common.rs  lib.rs
lambda-appsync-proc/src/appsync_lambda_main/: graphql.rs  mod.rs  overrides.rs
lambda-appsync-proc/src/appsync_operation/: mod.rs
lambda-appsync-proc/tests/: tests.rs
lambda-appsync-proc/tests/fail/: invalid_args.rs  invalid_args.stderr  invalid_field_name_override.rs  invalid_field_name_override.stderr  invalid_field_override.rs  invalid_field_override.stderr  invalid_field_type_override.rs  invalid_field_type_override.stderr  invalid_log_init_args.rs  invalid_log_init_args.stderr  invalid_log_init_ret.rs  invalid_log_init_ret.stderr  invalid_operation.rs  invalid_operation.stderr  invalid_operation_arg_override.rs  invalid_operation_arg_override.stderr  invalid_operation_arg_type_override.stderr  invalid_operation_override.rs  invalid_operation_override.stderr  invalid_operation_type_override.stderr  invalid_return_type.rs  invalid_return_type.stderr  invalid_type_field_override.rs  invalid_type_field_override.stderr  invalid_type_name_override.rs  invalid_type_name_override.stderr  invalid_type_operation_arg_override.rs  invalid_type_operation_arg_override.stderr  invalid_type_operation_override.rs  invalid_type_operation_override.stderr  invalid_type_override.rs  invalid_type_override.stderr  missing_arg.rs  missing_arg.stderr  missing_arg_with_event.rs  missing_arg_with_event.stderr
lambda-appsync-proc/tests/pass/: aws_sdk_clients.rs  basic_operation.rs  batch_options.rs  correct_types.rs  event_logging_option.rs  field_overrides.rs  log_init.rs  name_and_type_overrides.rs  name_overrides.rs  operation_keep_name.rs  operation_keep_name_with_event.rs  operation_with_event.rs  operations_only.rs  request_hook.rs  type_overrides.rs  types_only.rs
lambda-appsync/src/: id.rs  lib.rs  subscription_filters.rs  with_std.rs  without_std.rs
lambda-appsync/src/appsync/: mod.rs  subscription_filters.rs  types.rs
lambda-appsync/src/aws_scalars/: datetime.rs  email.rs  mod.rs  phone.rs  timestamp.rs  url.rs
lambda-appsync/tests/: integration_test.rs  lambda_integration.rs  lambda_integration_no_batch.rs  rename_test.rs  serde_test.rs
