[workspace]
members = ["lambda-appsync", "lambda-appsync-proc"]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.81.0"
edition = "2021"
authors = ["Jérémie RODON <jeremie.rodon@gmail.com>"]
license = "MIT"
description = "A type-safe framework for AWS AppSync Direct Lambda resolvers"
repository = "https://github.com/JeremieRodon/lambda-appsync"
readme = "README.md"
keywords = ["aws", "appsync", "lambda", "graphql", "serverless"]
categories = [
    "web-programming",
    "api-bindings",
    "development-tools::procedural-macro-helpers",
]

[workspace.metadata]
msrv = "1.81.0"
