[workspace]
members = ["lambda-appsync", "lambda-appsync-proc"]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.81.0"
edition = "2021"
authors = ["Jérémie RODON <jeremie.rodon@gmail.com>"]
license = "MIT"
description = "A type-safe framework for AWS AppSync Direct Lambda resolvers"
repository = "https://github.com/JeremieRodon/lambda-appsync"
readme = "README.md"
keywords = ["aws", "appsync", "lambda", "graphql", "serverless"]
categories = [
    "web-programming",
    "api-bindings",
    "development-tools::procedural-macro-helpers",
]

[workspace.metadata]
msrv = "1.81.0"

[workspace.dependencies]
# Main crate dependencies
tokio = { version = "1", features = ["macros"] }
lambda_runtime = "0.12"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-smithy-types = "1.3"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
uuid = { version = "1.11", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Proc-macro crate dependencies
syn = { version = "2.0", default-features = false, features = [
    "parsing",
    "proc-macro",
] }
quote = "1.0"
proc-macro2 = "1.0"
graphql-parser = "0.4"

# Dev dependencies
aws-sdk-dynamodb = "1"
aws-sdk-s3 = "1"
