[package]
name = "lambda-appsync-proc"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for the lambda-appsync type-safe AWS AppSync resolver framework"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", default-features = false, features = [
    "parsing",
    "proc-macro",
] }
quote = "1.0"
proc-macro2 = "1.0"

graphql-parser = "0.4"
