[package]
name = "lambda-appsync-proc"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for the lambda-appsync type-safe AWS AppSync resolver framework"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
graphql-parser = { workspace = true }

[dev-dependencies]
