[package]
name = "lambda-appsync-proc"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Procedural macros for the lambda-appsync type-safe AWS AppSync resolver framework"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
graphql-parser = { workspace = true }

[dev-dependencies]
lambda-appsync = { path = "../lambda-appsync", default-features = false, features = ["log", "env_logger", "tracing"] }
tracing = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
serde = { workspace = true }
trybuild = { workspace = true }

[features]
default = ["log", "env_logger", "tracing"]
log = []
env_logger = []
tracing = []
