[package]
name = "lambda-appsync"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lambda-appsync-proc = { path = "../lambda-appsync-proc" }
tokio = { workspace = true }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-smithy-types = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
aws-sdk-dynamodb = { workspace = true }
