[package]
name = "lambda-appsync"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lambda-appsync-proc = { path = "../lambda-appsync-proc" }
aws-smithy-types = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hashbrown = { workspace = true }
web-time = { workspace = true }


# Main crate dependencies with the std feature (required for generating a Lambda main function)
env_logger = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
lambda_runtime = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["v4", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { workspace = true }

[dev-dependencies]
aws-sdk-dynamodb = { workspace = true }


[features]
default = ["std"]
std = [
    "dep:tokio",
    "dep:lambda_runtime",
    "dep:aws-config",
    "dep:env_logger",
    "serde/std",
    "serde_json/std",
    "uuid/std",
    "thiserror/std",
]
